--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.85.0",
