--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^3.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.14.0",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
+    "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
